--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
     /* Main content */
     .main {
-      flex-grow: 1;
-      background-color: #000;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
+  margin-left: 240px; /* Matches sidebar width */
+  padding: 20px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
     .content {
       flex-grow: 1;
