--- a/index.html
+++ b/index.html
@@ -139,28 +139,34 @@
 }
 
 .sidebar {
-  width: 220px;
   background-color: #4b0082;
-  padding: 20px 0;
+  width: 240px;
+  height: 100vh;
   position: fixed;
-  height: 100%;
-  top: 80px; /* to avoid overlapping with title-bar */
+  top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
+  padding-top: 20px;
   gap: 10px;
 }
 
 .tab {
-  padding: 15px;
+  background-color: #6a0dad;
+  border: none;
   color: white;
+  padding: 14px 20px;
+  font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-align: center;
+  border-radius: 12px;
+  margin: 10px;
+  width: calc(100% - 20px);
+  text-align: left;
+  transition: background 0.3s ease;
 }
 
 .tab:hover {
-  background-color: #6a0dad;
+  background-color: #8e44ad;
 }
 
 #content {
