--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
     }
 
     /* Main content */
-    .main {
-  margin-left: 240px; /* Matches sidebar width */
+  .main {
+  margin-left: 240px;
   padding: 20px;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  background-color: #0d001a;
+  color: lavender;
+  min-height: 100vh;
 }
 
     .content {
@@ -56,19 +55,27 @@
 }
 
 .panel {
-  flex: 1;
-  background-color: #333;
-  padding: 15px;
-  border-radius: 10px;
-  min-height: 150px;
+  background-color: #1a001f;
+  padding: 20px;
+  border-radius: 16px;
+  margin-bottom: 20px;
+  color: #fff;
 }
+
 
     /* Bottom buttons */
     .bottom-bar {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-    }
+  background-color: #8e44ad;
+  color: white;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 240px;
+  right: 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 
     .btn {
       background-color: #9370DB;
