--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+this is how the code looks rn: <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -14,7 +14,19 @@
       overflow: hidden;
     }
 
-        .sidebar:hover {
+    /* Sidebar */
+    .sidebar {
+      background-color: #4b0082; /* dark purple */
+      width: 60px;
+      transition: width 0.3s;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 20px;
+    }
+
+    .sidebar:hover {
       width: 200px;
     }
 
@@ -34,13 +46,14 @@
     }
 
     /* Main content */
-  .main {
-  margin-left: 240px;
-  padding: 20px;
-  background-color: #0d001a;
-  color: lavender;
-  min-height: 100vh;
-}
+    .main {
+      flex-grow: 1;
+      background-color: #000;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
 
     .content {
       flex-grow: 1;
@@ -55,27 +68,19 @@
 }
 
 .panel {
-  background-color: #1a001f;
-  padding: 20px;
-  border-radius: 16px;
-  margin-bottom: 20px;
-  color: #fff;
+  flex: 1;
+  background-color: #333;
+  padding: 15px;
+  border-radius: 10px;
+  min-height: 150px;
 }
-
 
     /* Bottom buttons */
     .bottom-bar {
-  background-color: #8e44ad;
-  color: white;
-  padding: 10px;
-  position: fixed;
-  bottom: 0;
-  left: 240px;
-  right: 0;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
+      display: flex;
+      justify-content: space-around;
+      margin-top: 20px;
+    }
 
     .btn {
       background-color: #9370DB;
@@ -146,34 +151,28 @@
 }
 
 .sidebar {
+  width: 220px;
   background-color: #4b0082;
-  width: 240px;
-  height: 100vh;
+  padding: 20px 0;
   position: fixed;
-  top: 0;
+  height: 100%;
+  top: 80px; /* to avoid overlapping with title-bar */
   left: 0;
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
   gap: 10px;
 }
 
 .tab {
-  background-color: #6a0dad;
-  border: none;
+  padding: 15px;
   color: white;
-  padding: 14px 20px;
-  font-size: 16px;
   cursor: pointer;
-  border-radius: 12px;
-  margin: 10px;
-  width: calc(100% - 20px);
-  text-align: left;
-  transition: background 0.3s ease;
+  transition: background-color 0.3s ease;
+  text-align: center;
 }
 
 .tab:hover {
-  background-color: #8e44ad;
+  background-color: #6a0dad;
 }
 
 #content {
@@ -317,6 +316,10 @@ button:hover {
       <h2>Welcome, baby girl 💜</h2>
       <p>Select a section to begin.</p>
     </div>
+    <button class="mind-btn" data-response="You crave attention, don't you?">Craving attention</button>
+<button class="mind-btn" data-response="Feeling small and soft today?">Feeling submissive</button>
+<button class="mind-btn" data-response="I miss you too 💜">I miss you</button>
+<button class="mind-btn" data-response="Here’s something to do.">Just want instructions</button>
     <div class="bottom-bar">
       <button onclick="toggleChat()" class="btn">Chat</button>
       <button class="btn" onclick="showContent('submit')">Submit</button>
@@ -334,38 +337,40 @@ button:hover {
   <script>
     let activeTasks = [];
 
-function updateActiveTasks() {
-  const activeTaskDiv = document.getElementById("content");
-  let html = `<h2>Active Tasklist</h2><ul>`;
-  activeTasks.forEach(task => {
-    html += `<li>${task}</li>`;
-  });
-  html += `</ul>`;
-  activeTaskDiv.innerHTML = html;
+function updateActiveTasks(task) {
+  if (!activeTasks.includes(task)) {
+    if (activeTasks.length >= 3) activeTasks.shift(); // Max 3 tasks
+    activeTasks.push(task);
+  }
+
+  // If viewing task list, update UI immediately
+  if (document.getElementById('taskList')) {
+    document.getElementById('taskList').innerHTML = activeTasks.map(t => <li>${t}</li>).join('');
+  }
 }
     function showContent(section) {
       const content = document.getElementById('content');
       let html = '';
       switch (section) {
         case 'home':
-  html = `
+  html = 
     <h2>Welcome, babygirl 🖤</h2>
     <p>Come to me when you're ready to listen.</p>
-  `;
+  ;
   break;
         case 'tasks':
           html = '<h2>Tasklist</h2><ul><li>Task 1: ...</li><li>Task 2: ...</li></ul>';
           break;
         case 'mind':
-  html = `
+  html = 
     <h2>What’s on your mind?</h2>
     <div class="panel-row">
-      <button class="mind-btn" data-response="You crave attention, don't you?">Craving attention</button>
-        <button class="mind-btn" data-response="Feeling small and soft today?">Feeling submissive</button>
-        <button class="mind-btn" data-response="I miss you too 💜">I miss you</button>
-        <button class="mind-btn" data-response="Here’s something to do.">Just want instructions</button>
+      <button onclick="handleMindChoice('Craving attention')">Craving attention</button>
+      <button onclick="handleMindChoice('Feeling submissive')">Feeling submissive</button>
+      <button onclick="handleMindChoice('I miss you')">I miss you</button>
+      <button onclick="handleMindChoice('Just want instructions')">Just want instructions</button>
     </div>
-  `;
+  ;
   break;
         case 'scoring':
           html = '<h2>Scoring</h2><p>Points: 75/100</p>';
@@ -377,7 +382,7 @@ function updateActiveTasks() {
           html = '<h2>Submit Tasks</h2><input type="file" /><br/><button class="btn" style="margin-top:10px;">Upload</button>';
           break;
           case 'drive':
-  html = `
+  html = 
     <h2>Do you wish to drive?</h2>
     <div class="panel-row">
       <div class="panel" id="panel1">
@@ -388,25 +393,16 @@ function updateActiveTasks() {
       <div class="panel" id="panel2"></div>
       <div class="panel" id="panel3"></div>
     </div>
-  `;
+  ;
   break;
   case 'activeTasks':
-  html = `
+  html = 
     <h2>Active Tasklist</h2>
     <ul id="taskList"></ul>
-  `;
+  ;
   break;
       }
       content.innerHTML = html;
-      if (tab === 'mind') {
-  document.querySelectorAll('.mind-btn').forEach(btn => {
-    btn.addEventListener('click', () => {
-      const task = btn.innerText;
-      activeTasks.push(task);
-      updateActiveTasks();
-    });
-  });
-}
     }
 function chooseLevel1(choice) {
   const panel2 = document.getElementById('panel2');
@@ -414,17 +410,17 @@ function chooseLevel1(choice) {
   panel3.innerHTML = ''; // Clear downstream
 
   if (choice === 'lead') {
-    panel2.innerHTML = `
+    panel2.innerHTML = 
       <p>Choose intensity:</p>
       <button onclick="chooseLevel2('lead', 'gentle')">Gentle</button>
       <button onclick="chooseLevel2('lead', 'firm')">Firm</button>
-    `;
+    ;
   } else if (choice === 'submit') {
-    panel2.innerHTML = `
+    panel2.innerHTML = 
       <p>Choose response:</p>
       <button onclick="chooseLevel2('submit', 'obedient')">Obedient</button>
       <button onclick="chooseLevel2('submit', 'tease')">Teasing</button>
-    `;
+    ;
   }
 }
 
@@ -432,29 +428,29 @@ function chooseLevel2(l1, choice) {
   const panel3 = document.getElementById('panel3');
 
   if (l1 === 'lead' && choice === 'gentle') {
-    panel3.innerHTML = `
+    panel3.innerHTML = 
       <p>Pick your pace:</p>
       <button onclick="finalChoice('lead-gentle-soft')">Soft</button>
       <button onclick="finalChoice('lead-gentle-confident')">Confident</button>
-    `;
+    ;
   } else if (l1 === 'lead' && choice === 'firm') {
-    panel3.innerHTML = `
+    panel3.innerHTML = 
       <p>Pick your tone:</p>
       <button onclick="finalChoice('lead-firm-commanding')">Commanding</button>
       <button onclick="finalChoice('lead-firm-unrelenting')">Unrelenting</button>
-    `;
+    ;
   } else if (l1 === 'submit' && choice === 'obedient') {
-    panel3.innerHTML = `
+    panel3.innerHTML = 
       <p>Pick your posture:</p>
       <button onclick="finalChoice('submit-obedient-kneeling')">Kneeling</button>
       <button onclick="finalChoice('submit-obedient-silent')">Silent</button>
-    `;
+    ;
   } else if (l1 === 'submit' && choice === 'tease') {
-    panel3.innerHTML = `
+    panel3.innerHTML = 
       <p>Pick your tone:</p>
       <button onclick="finalChoice('submit-tease-playful')">Playful</button>
       <button onclick="finalChoice('submit-tease-sassy')">Sassy</button>
-    `;
+    ;
   }
 }
 
@@ -481,7 +477,7 @@ function finalChoice(path) {
       setTimeout(() => popup.style.display = 'none', 5000);
     }
     function handleMindChoice(option) {
-  showPopup(`You chose: ${option}`);
+  showPopup(You chose: ${option});
   updateActiveTasks(option);
 }
 function toggleChat() {
@@ -495,7 +491,7 @@ function handleChat(event) {
     const chatlog = document.getElementById('chatlog');
     if (input.value.trim() !== '') {
       const entry = document.createElement('div');
-      entry.textContent = `You: ${input.value}`;
+      entry.textContent = You: ${input.value};
       chatlog.appendChild(entry);
       input.value = '';
       chatlog.scrollTop = chatlog.scrollHeight;
@@ -503,14 +499,14 @@ function handleChat(event) {
   }
 }
   document.querySelectorAll('.mind-btn').forEach(btn => {
-  btn.addEventListener('click', () => {
-    const text = btn.getAttribute('data-response');
-    const response = document.createElement('div');
-    response.className = 'floating-response';
-    response.innerText = text;
-    btn.parentElement.appendChild(response);
+    btn.addEventListener('click', () => {
+      const text = btn.getAttribute('data-response');
+      const response = document.createElement('div');
+      response.className = 'floating-response';
+      response.innerText = text;
+      document.querySelector('.panel').appendChild(response);
+    });
   });
-});
   </script>
 </body>
 </html>
