--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ function updateActiveTasks(task) {
         case 'home':
   html = 
     <h2>Welcome, babygirl 🖤</h2>
-    <p>Come to me when you're ready to listen.</p>
+    <p>'Come to me when you are ready to listen.'</p>
   ;
   break;
         case 'tasks':
