--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div id="bottomRibbon">
     <div class="button" onclick="chatbox()">Chatbox</div>
     <div class="button" onclick="uploadWindow()">Upload</div>
-    <div class="button wide-button" onclick="floatingText('Passive task added.')">Weekly Passive Tasks</div>
+    <div class="button wide-button" onclick="floatingText('As underwear, you are allowed to wear only bras on Monday, Wednesday, Thursday, and Saturday, and only panties every other day. Don't let me down. 😘')">Passive Task of the Week</div>
   </div>
 
   <script>
